--- a/app/globals.css
+++ b/app/globals.css
@@ -29,12 +29,11 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  height: 100vh;
+  background-image: url('/rorBG.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  backdrop-filter:blur(5px);
 }
 
 @layer utilities {
